# optiglot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  design_choices.md  pyproject.toml
.github/workflows/: publish.yml
src/harnesses/typescript/: README.md  index.ts  package.json
src/harnesses/typescript/src/: dataset.ts  models.ts  module.ts  server.ts  teleprompt.ts
src/harnesses/typescript/src/ai-sdk/: predict.ts
src/optiglot/: models.py  settings.py  utils.py
src/optiglot/optimizers/: __init__.py  bootstrap.py  teleprompt.py  vanilla.py
