[project]
dynamic = ["version"]
name = "optiglot"
description = "Make your DSPy optimizers multi-lingual."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dspy = [
  "dspy>=3.0.4",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]

# Keep reporting unused imports (F401),
# but do NOT allow Ruff to autofix them
unfixable = ["F401"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/optiglot"]

[tool.hatch.build.targets.wheel]
packages = ["src/optiglot"]

[tool.hatch.version]
source = "vcs"